force-app/main/default/objects/Lead/fields/Country_State__c.field-meta.xml
<CustomField>
    <fullName>Country_State__c</fullName>
    <label>Country/State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>