force-app/main/default/objects/Lead/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <type>TextArea</type>
</CustomField>