force-app/main/default/objects/Lead/fields/opt_to__c.field-meta.xml
<CustomField>
    <fullName>opt_to__c</fullName>
    <defaultValue>false</defaultValue>
    <label>opt to</label>
    <type>Checkbox</type>
</CustomField>