force-app/main/default/objects/Lead/fields/PostCode_zipcode__c.field-meta.xml
<CustomField>
    <fullName>PostCode_zipcode__c</fullName>
    <label>PostCode/zipcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>