force-app/main/default/objects/Lead/fields/Walking_Trip__c.field-meta.xml
<CustomField>
    <fullName>Walking_Trip__c</fullName>
    <label>Walking Trip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>