force-app/main/default/objects/Lead/fields/Web_Comment__c.field-meta.xml
<CustomField>
    <fullName>Web_Comment__c</fullName>
    <label>Web Comment</label>
    <type>TextArea</type>
</CustomField>